improved spelling and clarity

--- a/_posts/2023-10-05-virtio.markdown
+++ b/_posts/2023-10-05-virtio.markdown
@@ -4,9 +4,8 @@ title:  "VirtIO in context of ECU virtualization on AWS"
 date:   2023-10-05 10:24:47 +0200
 categories: AWS, ECU, virtualization, virtio
 ---
+Virtio, defined by the [OASIS Standard](https://docs.oasis-open.org/virtio/virtio/v1.1/csprd01/virtio-v1.1-csprd01.html), outlines a suite of virtualization devices. It establishes an architecture that paravirtualizes hardware devices, with the best explanation available [here](https://developer.ibm.com/articles/l-virtio/). 
 
-Virtio is an [OASIS Standard](https://docs.oasis-open.org/virtio/virtio/v1.1/csprd01/virtio-v1.1-csprd01.html) describing a family of virtio devices. Virtio is implementing an architecture paravirtualizing hardware devices as described [here](https://developer.ibm.com/articles/l-virtio/). Which is the best description of virtio I have found on the Internet. 
+In practice, Virtio devices can be addressed and utilized just like actual hardware devices. Virtio serves as the standard Input/Output (IO) virtualization framework for the Linux KVM (Kernel-based Virtual Machine) hypervisor. A hypervisor offers a management layer that enables the operation of multiple virtual machines on a single hardware unit. Virtio provides specifications for various device types, such as block storage and network devices, thereby eliminating the need to use different frameworks for different device types.
 
-Virtio devices can be addressed and used as if they are real devices.  Virtio is the standard IO virtualization framework for the Linux KVM (Kernel-based Virtual Machine) hypervisor. A hyperviror is providing a thing management layer providing functionality to run multiple virtual machines on one piece of hardware. Since virtio is providing a specification for a number of different device types (block storage, network) making the use of different frameworks for different types of devices obsolete.
-
-Apart from that virtio is considered to provide better [performance](https://wiki.libvirt.org/Virtio.html) belonging to the family of virtualization fremworks employing paravirtualization techniques compared to fully virtualized abstractions of devices.
+Moreover, Virtio is recognized for delivering superior [performance](https://wiki.libvirt.org/Virtio.html) as it belongs to a class of virtualization frameworks that employ paravirtualization techniques, presenting an edge over fully virtualized device abstractions.
